--- a/public/sass/import/_atomes.scss
+++ b/public/sass/import/_atomes.scss
@@ -9,21 +9,14 @@
 
 /* -----COLORS-----*/
 
-$primary-color: #ff3b1e;
-$primary-color-light: #000000;
-$primary-color-dark: #000000;
+$primary-color: #4c4c4c;
+$primary-color-light: #787878;
+$primary-color-dark: #242424;
 
 
-$secondary-color: #000000;
-$secondary-color-light: #000000;
-$secondary-color-dark: #000000;
-
-$primary-color-card: #0f74a8;
-$primary-color-light-card: #FFFFFF;
-$primary-color-dark-card: #000000;
-
-$btn-backgrd-primary: #FFFFFF;
-$btn-backgrd-hover: #0f74a8;
+$secondary-color: #4caf50;
+$secondary-color-light: #80e27e;
+$secondary-color-dark: #087f23;
 
 $shadow: 0px 5px 8px 0px rgba(0,0,0,0.75);;
 
