--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,12 +10,14 @@
             selector:'textarea',
             plugins: 'wordcount'
         });</script>
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         {% block stylesheets %}
             <link href="{{ asset("css/style.css") }}" rel="stylesheet">
         {% endblock %}
     </head>
     <body>
+       <div class="page-wrap">
         <nav class="navbar navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -53,10 +55,10 @@
                 {% if  not is_granted('ROLE_USER') %}
                 <ul class="nav navbar-nav navbar-right" id="connection">
                     <li>
-                        <a class="btn btn-default" href="{{ path('register') }}">Register</a>
+                        <a class="btn" href="{{ path('register') }}" id="registerBtn">Register</a>
                     </li>
                      <li>
-                         <a class="btn btn-outline" href="{{ path('login') }}">Sign in</a>
+                         <a class="btn" href="{{ path('login') }}" id="signInBtn" >Sign in</a>
                      </li>
                  </ul>
                 {% endif %}
@@ -73,14 +75,14 @@
                 {% endif %}
             </div>
         </nav>
-        <div class="page-wrap">
-                {% for label, messages in app.flashes(['denied','error','success','warning']) %}
-                    {% for message in messages %}
-                        <div class="alert alert-{{ label }}" style="font-size: 2em">
-                            <p>{{ message }}</p>
-                        </div>
-                    {% endfor %}
+        <div class="main">
+            {% for label, messages in app.flashes(['denied','error','success','warning']) %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ label }}" style="font-size: 2em">
+                        <p>{{ message }}</p>
+                    </div>
                 {% endfor %}
+            {% endfor %}
 
                 {% block body %}
 
@@ -97,6 +99,7 @@
                         </ul>
                     </div>
                 </div>
+            </div>
         </div>
     </body>
 </html>
