--- a/templates/pagination.html.twig
+++ b/templates/pagination.html.twig
@@ -31,7 +31,7 @@
 
         {% if pageNumber > 1 %}
         <div id="previous">
-            <a class="pull-left btn btn-primary" href="{{ path('browse',{'pageNumber': pageNumber - 1}) }}">
+            <a class="pull-left btn" href="{{ path('browse',{'pageNumber': pageNumber - 1}) }}" id="previousBtn">
                 <i class="fa fa-chevron-left" aria-hidden="true"></i>
             </a>
         </div>
@@ -39,7 +39,7 @@
 
         {% if totalPage > 1 and pageNumber < totalPage %}
         <div id="nextPrevious">
-            <a class="pull-right btn btn-primary" href="{{ path('browse',{'pageNumber': pageNumber + 1}) }}">
+            <a class="pull-right btn" href="{{ path('browse',{'pageNumber': pageNumber + 1}) }}" id ="nextBtn">
                 <i class="fa fa-chevron-right" aria-hidden="true"></i>
             </a>
         </div>
