--- a/templates/story.html.twig
+++ b/templates/story.html.twig
@@ -24,15 +24,16 @@
             <h1>{{ story.title }}</h1>
         </div>
 
-        <div id="abstract">
+        <div id="storyAbstract">
             <h2>The project in a few words</h2>
             <p>{{ story.abstract|raw }}</p>
         </div>
 
-        <div id="plot">
+        <div id="storyPlot">
             <h3>A Climate Story #{{ story.id }}</h3>
             <p>{{ story.plot|raw }}</p>
         </div>
+
     </div>
         <div id="moreStory">
         <div id="contact">
