--- a/templates/pagination.html.twig
+++ b/templates/pagination.html.twig
@@ -18,10 +18,16 @@
             {{ form_widget(filter.country ,{'attr':{'class':'form-control'}}) }}
         </div>
         <div class="form-group" id="filterBtn">
-            <button class="btn btn-success" type="submit">search</button>
+            <button class="btn btn-success" type="submit">
+                <i class="fa fa-search " aria-hidden="true"></i>
+                search
+            </button>
         </div>
         <div class="form-group" id="resetBtn">
-            <a class="btn" href="{{ path('browse', {'pageNumber':1})}}">reset filters</a>
+            <a class="btn" href="{{ path('browse', {'pageNumber':1})}}">
+                <i class="fa fa-power-off " aria-hidden="true"></i>
+                reset
+            </a>
         </div>
         {{ form_end(filter) }}
     </div>
