--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -91,6 +91,7 @@ h2 {
 	position: absolute;
 	width: 100%;
 	background-color: $primary-color-dark;
+	margin-bottom: -100px;
 }
 
 .main{
@@ -245,6 +246,17 @@ h2 {
 	margin-top: 5%;
 	padding: 0;
 }
+
+h1,
+#announcement,
+#intro h2{
+	text-align: center;
+	text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
+}
+
+
+
+
 
 /*------- pagination --------*/
 
