--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -67,7 +67,11 @@ h2 {
 .btn {
 	background: #ffffff;
 }
-
+.alert-warning{
+	color: #F54041;
+	background-color: #FFFFFF;
+	border-color: #F54041;
+}
 /* -----LAYOUT-----*/
 
 @mixin bandeau-resolution {
@@ -85,13 +89,9 @@ h2 {
 }
 
 .footer{
-	bottom: 0;
-	height: 100px;
-	left: 0;
-	position: absolute;
 	width: 100%;
 	background-color: $primary-color-dark;
-	margin-bottom: -100px;
+	height:100px;
 }
 
 .main{
@@ -135,32 +135,32 @@ h2 {
 }
 
 #logout,
-#registerBtn,
-#signInBtn {
+#registerLink,
+#signInLink {
 	padding: 10px !important;
 	margin-top: 5px;
 	margin-right: 10px;
 }
 
 #logout,
-#signInBtn{
+#signInLink{
 	color: $secondary-color-light;
 	border: solid 1px $secondary-color-light;
 }
 
 #logout:hover,
-#signInBtn:hover{
+#signInLink:hover{
 	color: #FFFFFF;
 	border: solid 1px #FFFFFF;
 	background: $secondary-color-light;
 }
 
-#registerBtn{
+#registerLink{
 	color: $primary-color;
 	border: solid 1px $primary-color;
 }
 
-#registerBtn:hover{
+#registerLink:hover{
 	color: #FFFFFF;
 	border: solid 1px #FFFFFF;
 	background: $primary-color;
@@ -254,7 +254,27 @@ h1,
 	text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
 }
 
-
+#homeLinks{
+	border-top: solid 1px $secondary-color-dark;
+	text-align: center;
+	padding-bottom: 2%;
+	padding-top: 2%;
+	.btn{
+		border-color: $secondary-color-dark !important;
+		color: $secondary-color-dark !important;
+	}
+	.btn:hover{
+		border-color: transparent !important;
+		color: #FFFFFF !important;
+		background-color: $secondary-color-dark;
+	}
+	h3{
+		margin-bottom: 2%;
+		color: $primary-color;
+		font-weight: 900;
+	}
+;
+}
 
 
 
@@ -293,6 +313,36 @@ h1,
 }
 
 /*--------FORM---------*/
+#addForm,
+.connectionForm
+{
+	width:50%;
+	margin-left: 25%;
+	margin-bottom: 10%;
+	input:focus{
+		border-color: $secondary-color !important;
+	}
+	select:focus{
+			 border-color: $secondary-color-dark;
+			 background: transparent;
+		 }
+}
+
+.connectionTitle{
+	text-align: center;
+}
+
+/*lost password*/
+#askNewForm{
+	margin-top: 10%;
+}
+
+/*register*/
+#registerForm{
+	margin-top: 0;
+}
+
+/*search-filters*/
 #filter{
 	border-bottom: 1px solid $secondary-color-dark;
 	border-top: 1px solid $secondary-color-dark;
@@ -334,6 +384,36 @@ h1,
 }
 #filter select option:checked{
 	color: $secondary-color-dark;
+}
+
+/*form validation*/
+.invalid{
+	margin-left: -5%;
+}
+.invalid,
+.invalid_sign {
+	color: #F54041;
+}
+
+.invalid_sign ,
+.valid_sign {
+	position: relative;
+	left: 100%;
+	top: -30px;
+	padding-left: 1%;
+	i{
+		margin-left: 2%;
+		font-size: 1.5em
+	}
+}
+
+.valid_sign i {
+	color: #5fdda1;
+}
+
+.invalidBack ul {
+	color:#F54041;
+	list-style: none;
 }
 /*------story-------*/
 #storyTags{
@@ -459,6 +539,15 @@ h1,
 		#abstract,
 		#plot{
 			font-size: 1.2rem;
+		}
+        /*------form--------*/
+		#addForm,
+		.connectionForm {
+			width:70%;
+			margin: 15%;
+		}
+		.invalid{
+			margin-left: -10%;
 		}
 
 	}
