--- a/templates/connectionForms.html.twig
+++ b/templates/connectionForms.html.twig
@@ -2,6 +2,9 @@
 
 {% block body %}
       {% if app.request.get('_route') == 'login' %}
+        <div class="connectionTitle">
+           <h1>PLEASE SIGN IN</h1>
+        </div>
         <div class="connectionForm">
         {% if error %}
             <div class="alert alert-warning">{{ error.message }}</div>
@@ -29,6 +32,9 @@
       {% endif %}
 
      {% if app.request.get('_route') == 'register' %}
+        <div class="connectionTitle">
+            <h1>REGISTER</h1>
+        </div>
         <div class="connectionForm">
             {{ form_start(form ,{'attr':{'id':'registerForm'}}) }}
             <div class="form-group row">
@@ -79,7 +85,7 @@
                 </span>
                 <span class="invalid" id="invalid_pswd" style="display: none">Between 6 up to 30 letters</span>
             </div>
-            <div class="form-group row">
+            <div class="form-group row" id="confirm" style="display: none">
                 {{ form_label(form.confirmPswd) }}
                 {{ form_widget(form.confirmPswd ,{'attr':{'class':'form-control'}})}}
                 {{ form_errors(form.confirmPswd,{'attr':{'class':'invalid'}}) }}
@@ -105,7 +111,11 @@
 
       {% if app.request.attributes.get('_route') == 'lostPassword' %}
         <div class="connectionForm">
-            {{ form_start(form, {'attr':{'id':'asNewForm'}}) }}
+            <div class="connectionTitle">
+                <h1>LOST PASSWORD</h1>
+                <p>Fill the form below thus we will send you an email to reset your password </p>
+            </div>
+            {{ form_start(form, {'attr':{'id':'askNewForm'}}) }}
             <div class="form-group row">
                 {{ form_label(form.email) }}
                 {{ form_widget(form.email ,{'attr':{'class':'form-control'}}) }}
@@ -118,7 +128,7 @@
                 </span>
                 <span class="invalid" id="invalid_email" style="display: none">Enter a valid email</span>
             </div>
-            <div class="form-group">
+            <div class="form-group row">
                 <button class="btn btn-success" id="lostPswdBtn" type="submit">Submit</button>
             </div>
             {{ form_end(form) }}
