--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -332,6 +332,8 @@ h1,
 	text-align: center;
 }
 
+
+
 /*lost password*/
 #askNewForm{
 	margin-top: 10%;
@@ -385,6 +387,36 @@ h1,
 #filter select option:checked{
 	color: $secondary-color-dark;
 }
+
+/*add story form*/
+#addForm .row{
+	margin-right: 0!important;
+	margin-left: 0!important;
+}
+#storyPart1,
+#storyPart2,
+#storyPart3{
+	border-bottom: solid 1px $secondary-color;
+	margin-top: 2%;
+	padding-bottom: 2%;
+
+}
+#showPart1,
+#showPart2,
+#showPart3{
+	i{
+		color: $secondary-color;
+
+	}
+}
+.part4{
+	margin-top: 10%;
+	.btn{
+		width: 100%;
+		color: $secondary-color-dark;
+	}
+}
+
 
 /*form validation*/
 .invalid{
