--- a/templates/addStory.html.twig
+++ b/templates/addStory.html.twig
@@ -7,120 +7,130 @@
     </div>
     <div class="well">
         {{ form_start(form ,{'attr':{'id':'addForm'}}) }}
-        <div class="form-group row">
-            {{ form_label(form.topic) }}
-            {{ form_widget(form.topic ,{'attr':{'class':'form-control'}}) }}
-            <span class="invalidBack">{{ form_errors(form.topic) }}</span>
+        <div id="storyPart1">
+            <p id="showPart1"> <i class="fa fa-caret-down" aria-hidden="true"></i> Story topic and patronage</p>
+                <div class="form-group row part1" style="display: block">
+                    {{ form_label(form.topic) }}
+                    {{ form_widget(form.topic ,{'attr':{'class':'form-control'}}) }}
+                    <span class="invalidBack">{{ form_errors(form.topic) }}</span>
+                </div>
+                <div class="form-group row part1" style="display: block">
+                    {{ form_label(form.country) }}
+                    {{ form_widget(form.country ,{'attr':{'class':'form-control'}}) }}
+                    <span class="invalidBack">{{ form_errors(form.country) }}</span>
+                </div>
+                <div class="form-group row part1" style="display: block">
+                    {{ form_label(form.patronage) }}
+                    {{ form_widget(form.patronage,{'attr':{'class':'form-control'}}) }}
+                    <span class="invalidBack">{{ form_errors(form.patronage) }}</span>
+                </div>
+                <div class="form-group row part1" style="display: block">
+                    {{ form_label(form.investor) }}
+                    {{ form_widget(form.investor,{'attr':{'class':'form-control'}}) }}
+                    <span class="invalidBack">{{ form_errors(form.investor) }}</span>
+                    <span class="invalid_sign" id="invalid_investor_icon" style="display: none">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </span>
+                     <span class="valid_sign" id="valid_investor_icon" style="display:none">
+                        <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                    <span class="invalid" id="invalid_investor" style="display: none">Between 2 up to 100 characters</span>
+                </div>
+                <div class="form-group row  part1" style="display: block">
+                    {{ form_label(form.year) }}
+                    {{ form_widget(form.year ,{'attr':{'class':'form-control'}}) }}
+                <span class="invalidBack">{{ form_errors(form.year) }}</span>
+            </div>
         </div>
-        <div class="form-group row">
-            {{ form_label(form.country) }}
-            {{ form_widget(form.country ,{'attr':{'class':'form-control'}}) }}
-            <span class="invalidBack">{{ form_errors(form.country) }}</span>
+        <div id="storyPart2">
+            <span id="showPart2"> <i class="fa fa-caret-down" aria-hidden="true"></i> Story's abstract and narrative</span>
+                <div class="form-group row part2" style="display: none">
+                    {{ form_label(form.title) }}
+                    {{ form_widget(form.title ,{'attr':{'class':'form-control'}}) }}
+                    <span class="invalidBack">{{ form_errors(form.title) }}</span>
+                    <span class="invalid_sign" id="invalid_title_icon" style="display: none">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </span>
+                    <span class="valid_sign" id="valid_title_icon" style="display: none">
+                        <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                    <span class="invalid" id="invalid_title" style="display: none">Between 5 up to 100 characters</span>
+                </div>
+                <div class="form-group row part2" id="abstract" style="display: none">
+                    {{ form_label(form.abstract) }}
+                    {{ form_widget(form.abstract ,{'attr':{'class':'form-control'}}) }}
+                    <span class="invalidBack">{{ form_errors(form.abstract) }}</span>
+                    <span class="invalid_sign" id="invalid_abstract_icon" style="display: none">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </span>
+                    <span class="valid_sign" id="valid_abstract_icon" style="display: none">
+                        <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                    <span class="invalid" id="invalid_abstract" style="display: none">70 words maximum</span>
+                </div>
+                <div class="form-group row part2" id="plot" style="display: none">
+                    {{ form_label(form.plot) }}
+                    {{ form_widget(form.plot ,{'attr':{'class':'form-control'}}) }}
+                    <span class="invalidBack">{{ form_errors(form.plot) }}</span>
+                    <span class="invalid_sign" id="invalid_plot_icon" style="display: none">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </span>
+                    <span class="valid_sign" id="valid_plot_icon" style="display: none">
+                        <i class="fa fa-check" aria-hidden="true"></i>
+                    </span>
+                    <span class="invalid" id="invalid_plot" style="display: none">200 words maximum</span>
+                </div>
         </div>
-        <div class="form-group row">
-            {{ form_label(form.patronage) }}
-            {{ form_widget(form.patronage,{'attr':{'class':'form-control'}}) }}
-            <span class="invalidBack">{{ form_errors(form.patronage) }}</span>
+        <div id="storyPart3">
+            <span id="showPart3"> <i class="fa fa-caret-down" aria-hidden="true"></i> Story's intel</span>
+            <div class="form-group row part3" style="display: none">
+                {{ form_label(form.contactEmail) }}
+                {{ form_widget(form.contactEmail ,{'attr':{'class':'form-control'}}) }}
+                <span class="invalidBack">{{ form_errors(form.contactEmail) }}</span>
+                <span class="invalid_sign" id="invalid_email_icon" style="display: none">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </span>
+                <span class="valid_sign" id="valid_email_icon" style="display: none">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                </span>
+                <span class="invalid" id="invalid_email" style="display: none">Enter a valid email</span>
+            </div>
+            <div class="form-group row part3" style="display: none">
+                {{ form_label(form.contactPlace) }}
+                {{ form_widget(form.contactPlace ,{'attr':{'class':'form-control'}}) }}
+                <span class="invalidBack">{{ form_errors(form.contactPlace) }}</span>
+                <span class="invalid_sign" id="invalid_place_icon" style="display: none">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </span>
+                <span class="valid_sign" id="valid_place_icon" style="display: none">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                </span>
+                <span class="invalid" id="invalid_place" style="display: none">Between 3 up to 100 characters</span>
+            </div>
+            <div class="form-group row  part3" style="display: none">
+                {{ form_label(form.contactPhone) }}
+                {{ form_widget(form.contactPhone ,{'attr':{'class':'form-control'}}) }}
+                <span class="invalidBack">{{ form_errors(form.contactPhone) }}</span>
+                <span class="invalid_sign" id="invalid_phone_icon" style="display: none">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                </span>
+                <span class="valid_sign" id="valid_phone_icon" style="display: none">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                </span>
+                <span class="invalid" id="invalid_phone" style="display: none">Please enter a valid phone number, you can enter phone number with or without international prefix</span>
+            </div>
+            <div class="form-group row  part3" style="display: none">
+                {{ form_row(form.urls) }}
+                <a href="#" id="add_url" class="btn btn-default">add a link</a>
+            </div>
         </div>
-        <div class="form-group row">
-            {{ form_label(form.investor) }}
-            {{ form_widget(form.investor,{'attr':{'class':'form-control'}}) }}
-            <span class="invalidBack">{{ form_errors(form.investor) }}</span>
-            <span class="invalid_sign" id="invalid_investor_icon" style="display: none">
-                <i class="fa fa-times" aria-hidden="true"></i>
-            </span>
-            <span class="valid_sign" id="valid_investor_icon" style="display: none">
-                <i class="fa fa-check" aria-hidden="true"></i>
-            </span>
-            <span class="invalid" id="invalid_investor" style="display: none">Between 2 up to 100 characters</span>
-        </div>
-        <div class="form-group row">
-            {{ form_label(form.year) }}
-            {{ form_widget(form.year ,{'attr':{'class':'form-control'}}) }}
-            <span class="invalidBack">{{ form_errors(form.year) }}</span>
-        </div>
-        <div class="form-group row">
-            {{ form_label(form.title) }}
-            {{ form_widget(form.title ,{'attr':{'class':'form-control'}}) }}
-            <span class="invalidBack">{{ form_errors(form.title) }}</span>
-            <span class="invalid_sign" id="invalid_title_icon" style="display: none">
-                <i class="fa fa-times" aria-hidden="true"></i>
-            </span>
-            <span class="valid_sign" id="valid_title_icon" style="display: none">
-                <i class="fa fa-check" aria-hidden="true"></i>
-            </span>
-            <span class="invalid" id="invalid_title" style="display: none">Between 3 up to 100 characters</span>
-        </div>
-        <div class="form-group row" id="abstract">
-            {{ form_label(form.abstract) }}
-            {{ form_widget(form.abstract ,{'attr':{'class':'form-control'}}) }}
-            <span class="invalidBack">{{ form_errors(form.abstract) }}</span>
-            <span class="invalid_sign" id="invalid_abstract_icon" style="display: none">
-                <i class="fa fa-times" aria-hidden="true"></i>
-            </span>
-            <span class="valid_sign" id="valid_abstract_icon" style="display: none">
-                <i class="fa fa-check" aria-hidden="true"></i>
-            </span>
-            <span class="invalid" id="invalid_abstract" style="display: none">70 words maximum</span>
-        </div>
-        <div class="form-group row" id="plot">
-            {{ form_label(form.plot) }}
-            {{ form_widget(form.plot ,{'attr':{'class':'form-control'}}) }}
-            <span class="invalidBack">{{ form_errors(form.plot) }}</span>
-            <span class="invalid_sign" id="invalid_plot_icon" style="display: none">
-                <i class="fa fa-times" aria-hidden="true"></i>
-            </span>
-            <span class="valid_sign" id="valid_plot_icon" style="display: none">
-                <i class="fa fa-check" aria-hidden="true"></i>
-            </span>
-            <span class="invalid" id="invalid_plot" style="display: none">200 words maximum</span>
-        </div>
-        <div class="form-group row">
-            {{ form_label(form.contactEmail) }}
-            {{ form_widget(form.contactEmail ,{'attr':{'class':'form-control'}}) }}
-            <span class="invalidBack">{{ form_errors(form.contactEmail) }}</span>
-            <span class="invalid_sign" id="invalid_email_icon" style="display: none">
-                <i class="fa fa-times" aria-hidden="true"></i>
-            </span>
-            <span class="valid_sign" id="valid_email_icon" style="display: none">
-                <i class="fa fa-check" aria-hidden="true"></i>
-            </span>
-            <span class="invalid" id="invalid_email" style="display: none">Enter a valid email</span>
-        </div>
-        <div class="form-group row">
-            {{ form_label(form.contactPlace) }}
-            {{ form_widget(form.contactPlace ,{'attr':{'class':'form-control'}}) }}
-            <span class="invalidBack">{{ form_errors(form.contactPlace) }}</span>
-            <span class="invalid_sign" id="invalid_place_icon" style="display: none">
-                <i class="fa fa-times" aria-hidden="true"></i>
-            </span>
-            <span class="valid_sign" id="valid_place_icon" style="display: none">
-                <i class="fa fa-check" aria-hidden="true"></i>
-            </span>
-            <span class="invalid" id="invalid_place" style="display: none">Between 3 up to 100 characters</span>
-        </div>
-        <div class="form-group row">
-            {{ form_label(form.contactPhone) }}
-            {{ form_widget(form.contactPhone ,{'attr':{'class':'form-control'}}) }}
-            <span class="invalidBack">{{ form_errors(form.contactPhone) }}
-            <span class="invalid_sign" id="invalid_phone_icon" style="display: none">
-                <i class="fa fa-times" aria-hidden="true"></i>
-            </span>
-            <span class="valid_sign" id="valid_phone_icon" style="display: none">
-                <i class="fa fa-check" aria-hidden="true"></i>
-            </span>
-            <span class="invalid" id="invalid_phone" style="display: none">Please enter a valid phone number, you can enter phone number with or without international prefix</span>
-        </div>
-        <div class="form-group row">
-            {{ form_row(form.urls) }}
-            <a href="#" id="add_url" class="btn btn-default">add a link</a>
-        </div>
-        <div class="form-group row">
+        <div class="form-group row part4">
             <button class="btn btn-success" id="addStoryBtn" type="submit">Submit</button>
             <input id="userMail" type="hidden" value="{{ app.user.email }}">
         </div>
         {{ form_end(form) }}
     </div>
+
 
 {% endblock %}
 
