--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,21 +12,24 @@
         });</script>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         {% block stylesheets %}
             <link href="{{ asset("css/style.css") }}" rel="stylesheet">
         {% endblock %}
     </head>
     <body>
        <div class="page-wrap">
-        <nav class="navbar navbar-fixed-top">
+        <nav class="navbar navbar-toggleable-md navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
+                    <button type = "button" class = "navbar-toggle" data-toggle = "collapse" data-target = ".responsive_nav"><i class="fa fa-bars"></i></button>
                     <a class="navbar-brand" href="{{ path('home') }}">
                         <i class="fa fa-home" aria-hidden="true">
                             Climate Stories Bank
                         </i>
                     </a>
                 </div>
+                <div class = "collapse navbar-collapse responsive_nav">
                 {% if is_granted('ROLE_USER') %}
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
@@ -73,6 +76,7 @@
                     </li>
                 </ul>
                 {% endif %}
+                </div>
             </div>
         </nav>
         <div class="main">
@@ -85,10 +89,10 @@
             {% endfor %}
             {% block body %}
 
-            {% endblock %}
-            {% block javascripts %}
+                {% endblock %}
+                {% block javascripts %}
 
-            {% endblock %}
+                {% endblock %}
         </div>
          <div class="footer col-sm-12">
              <div id="footerItem">
