--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -595,11 +595,19 @@ h1,
         /*------form--------*/
 		#addForm,
 		.connectionForm {
-			width:70%;
-			margin: 15%;
+			width:90%;
+			margin: 5%;
+		}
+
+		/*--add story----*/
+		.well{
+			padding: 0!important;
 		}
 		.invalid{
 			margin-left: -10%;
+		}
+		.invalid_sign{
+			left:97%
 		}
 		#filter{
 			padding-top: 10% !important;
