--- a/templates/addStory.html.twig
+++ b/templates/addStory.html.twig
@@ -15,6 +15,10 @@
                     <span class="invalidBack">{{ form_errors(form.topic) }}</span>
                 </div>
                 <div class="form-group row part1" style="display: block">
+                    {{ form_label(form.worldArea) }}
+                    {{ form_widget(form.worldArea ,{'attr':{'class':'form-control'}}) }}
+                </div>
+                <div class="form-group row part1" style="display: block">
                     {{ form_label(form.country) }}
                     {{ form_widget(form.country ,{'attr':{'class':'form-control'}}) }}
                     <span class="invalidBack">{{ form_errors(form.country) }}</span>
