--- a/templates/storyCard.html.twig
+++ b/templates/storyCard.html.twig
@@ -21,7 +21,7 @@
                     </li>
                     <li class="list-inline-item">
                         <i class="fa fa-globe" aria-hidden="true"></i>
-                        {{ story.country|country}}
+                        {{ story.country == null ? story.worldArea|worldArea : story.country|country }}
                     </li>
                 </ul>
             </div>
