--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -42,6 +42,9 @@
             {{ form_widget(filter.patronage,{'attr':{'class':'form-control'}}) }}
         </div>
         <div class="form-group">
+            {{ form_widget(filter.worldArea,{'attr':{'class':'form-control'}}) }}
+        </div>
+        <div class="form-group">
             {{ form_widget(filter.country ,{'attr':{'class':'form-control'}}) }}
         </div>
         <div class="form-group" id="filterBtn">
