--- a/templates/pagination.html.twig
+++ b/templates/pagination.html.twig
@@ -15,6 +15,9 @@
             {{ form_widget(filter.patronage,{'attr':{'class':'form-control'}}) }}
         </div>
         <div class="form-group">
+            {{ form_widget(filter.worldArea,{'attr':{'class':'form-control'}}) }}
+        </div>
+        <div class="form-group">
             {{ form_widget(filter.country ,{'attr':{'class':'form-control'}}) }}
         </div>
         <div class="form-group" id="filterBtn">
