--- a/templates/connectionForms.html.twig
+++ b/templates/connectionForms.html.twig
@@ -62,6 +62,11 @@
                 <span class="invalid" id="invalid_surname" style="display: none">Between 3 up to 30 letters</span>
             </div>
             <div class="form-group row">
+                {{ form_widget(form.claimEdit) }}
+                {{ form_label(form.claimEdit) }}
+            </div>
+
+            <div class="form-group row">
                 {{ form_label(form.profession) }}
                 {{ form_widget(form.profession ,{'attr':{'class':'form-control'}}) }}
                 {{ form_errors(form.profession,{'attr':{'class':'invalid'}}) }}
