[mod]|[tinyMce] change targeted selector

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=fps3y9l4erw7zgwdffjno3ppzxkfzl8rxb9u4kndv95djvwx"></script>
         <script>tinymce.init({
-            selector:'textarea',
+            selector:'.tinyMce',
             plugins: 'wordcount'
         });</script>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
