--- a/templates/addStory.html.twig
+++ b/templates/addStory.html.twig
@@ -62,7 +62,7 @@
                 </div>
                 <div class="form-group row part2" id="abstract" style="display: none">
                     {{ form_label(form.abstract) }}
-                    {{ form_widget(form.abstract ,{'attr':{'class':'form-control'}}) }}
+                    {{ form_widget(form.abstract ,{'attr':{'class':'form-control tinyMce'}}) }}
                     <span class="invalidBack">{{ form_errors(form.abstract) }}</span>
                     <span class="invalid_sign" id="invalid_abstract_icon" style="display: none">
                         <i class="fa fa-times" aria-hidden="true"></i>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="form-group row part2" id="plot" style="display: none">
                     {{ form_label(form.plot) }}
-                    {{ form_widget(form.plot ,{'attr':{'class':'form-control'}}) }}
+                    {{ form_widget(form.plot ,{'attr':{'class':'form-control tinyMce'}}) }}
                     <span class="invalidBack">{{ form_errors(form.plot) }}</span>
                     <span class="invalid_sign" id="invalid_plot_icon" style="display: none">
                         <i class="fa fa-times" aria-hidden="true"></i>
