[add]|[js/html] create word meter for register form texarea

--- a/templates/connectionForms.html.twig
+++ b/templates/connectionForms.html.twig
@@ -75,6 +75,7 @@
                 {{ form_label(form.engagement) }}
                 {{ form_widget(form.engagement ,{'attr':{'class':'form-control'}}) }}
                 {{ form_errors(form.engagement,{'attr':{'class':'invalid'}}) }}
+                <span id="wordCount"> 0/300 </span>
             </div>
             <div class="form-group row">
                 {{ form_label(form.email) }}
