--- a/templates/pagination.html.twig
+++ b/templates/pagination.html.twig
@@ -66,4 +66,9 @@
    {% endif %}
 {% endblock %}
 
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('js/search.js') }}"></script>
+{% endblock %}
+
 
