[mod]|[js] split js files into several shorter scricpt and assign them to templates

--- a/templates/addStory.html.twig
+++ b/templates/addStory.html.twig
@@ -141,7 +141,7 @@
 {% block javascripts %}
       {{ parent() }}
     <script src="{{ asset('js/collectionForm.js') }}"></script>
-    <script src="{{ asset('js/main.js') }}"></script>
+    <script src="{{ asset('js/storyForm.js') }}"></script>
 {% endblock %}
 
 
