--- a/templates/connectionForms.html.twig
+++ b/templates/connectionForms.html.twig
@@ -188,6 +188,6 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="{{ asset('js/main.js') }}"></script>
+    <script src="{{ asset('js/connectionForm.js') }}"></script>
 {% endblock %}
 
