--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script src="{{ asset('js/notification.js') }}"></script>
         {% block stylesheets %}
             <link href="{{ asset("css/style.css") }}" rel="stylesheet">
         {% endblock %}
@@ -87,9 +88,10 @@
                 {% endfor %}
             {% endfor %}
 
-           {% if not app.session.get('checkNotif') and is_granted('ROLE_USER') %}
-                <div class="notification" style="position:fixed;top:30%;z-index: 1">
-                    <i class="fa fa-close pull-right"></i>
+
+           {% if app.session.get('checkNotif') and is_granted('ROLE_USER') %}
+                <div class="notification" style="position:fixed;top:30%;z-index: 1; width: 100%; background: #c9453c ">
+                    <i class="fa fa-close pull-right" id="closeNotif"></i>
                     {% for key in notification.getNotificationForUser %}
                         <p> {{ key.type|typeToText }} </p>
                     {% endfor %}
@@ -98,10 +100,9 @@
 
             {% block body %}
 
-                {% endblock %}
-                {% block javascripts %}
-
-                {% endblock %}
+            {% endblock %}
+           {% block javascripts %}
+           {% endblock %}
            <div class="push"></div>
         </div>
          <div class="footer col-sm-12">
