--- a/public/sass/import/_atomes.scss
+++ b/public/sass/import/_atomes.scss
@@ -14,17 +14,22 @@ $primary-color-light: #787878;
 $primary-color-dark: #242424;
 
 
-$secondary-color: #4caf50;
-$secondary-color-light: #80e27e;
-$secondary-color-dark: #087f23;
+$secondary-color: #c9453c;
+$secondary-color-light: #c9453c;
+$secondary-color-dark: #c9453c;
 
 $shadow: 0px 5px 8px 0px rgba(0,0,0,0.75);;
 
 
 /* -----FONT-----*/
 
-$primary-typo: 'Raleway', sans-serif;
-$secondary-typo: verdana,sans-serif;
+$primary-typo: 'Montserrat', sans-serif;
+$font-size-title: 30px;
+$font-size-sub: 25px;
+$font-size-p : 16px;
+$font-weight-titles: 700;
+$font-weight-p: 400;
+
 
 
 /* -----BUTTONS-----*/
