--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -55,7 +55,7 @@
         </div>
         <div class="form-group" id="resetBtnHome">
             <a class="btn" href="{{ path('browse', {'pageNumber':1})}}">
-                <i class="fa fa-power-off " aria-hidden="true"></i>
+                <i class="fa fa-repeat " aria-hidden="true"></i>
                 reset
             </a>
         </div>
