--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -29,7 +29,7 @@
         <h2 class="storyCount">Our climate stories safe holds <b>{{ total[0]|join('|') }} {{ total[0]|join('|') > 1 ? 'stories' : 'story' }}</b></h2>
         <p class ="h2-like">Here's a selection of the last published one</p>
     </div>
-    <div id="homeStories">
+    <div class="homeStories">
         {{ include('storyCard.html.twig') }}
     </div>
     <div class="col-sm-12" id="homeLinks">
