[mod/style] home design

--- a/public/sass/import/_atomes.scss
+++ b/public/sass/import/_atomes.scss
@@ -9,9 +9,9 @@
 
 /* -----COLORS-----*/
 
-$primary-color: #4c4c4c;
-$primary-color-light: #787878;
-$primary-color-dark: #242424;
+$primary-color: #313336;
+$primary-color-light: #313336;
+$primary-color-dark: #313336;
 
 
 $secondary-color: #c9453c;
