--- a/public/sass/import/_desktop.scss
+++ b/public/sass/import/_desktop.scss
@@ -14,10 +14,13 @@ h1{
 
 #speech{
     padding:3%;
-    background-color: $primary-color-light;
     margin-bottom: 5%;
     margin-top: 5%;
     color: #FFFFFF;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     p{
         text-align: justify;
            }
