--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -2,7 +2,22 @@
 
 {% block body %}
     <div id="intro">
-        <h1>WELCOME TO THE CLIMATE STORY BANK</h1>
+        <img id="homeImg" src="{{ asset("images/homeImg.jpg")}}">
+        <div class="col-sm-12 imgText" id="speech">
+            <h1 class="storyCount">OUR CLIMATE STORIES SAFE <b>{{ total[0]|join('|') }} {{ total[0]|join('|') > 1 ? 'STORIES' : 'STORY' }}</b></h1>
+            <h2>Our mission</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec facilisis dictum sapien sed commodo.
+                Cras et tortor id risus ultricies varius. Sed luctus vestibulum lorem, dapibus dignissim massa pharetra a.
+                Praesent vulputate, arcu consequat tristique faucibus, nisi elit malesuada eros, eu blandit eros velit sit
+                amet lorem. Morbi consequat elit erat, accumsan vestibulum felis consequat at. Class aptent taciti sociosqu
+                ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris venenatis enim vel eros aliquet, et egestas nulla tempus.
+                Sed eleifend mollis tortor, et scelerisque metus sagittis id. Donec dignissim ipsum ac velit ornare, tincidunt placerat neque tempor.
+            </p>
+            <h3>And you what will your story be?</h3>
+            <a class="btn homeLinks" href="{{ path('addStory') }}">Add a story</a>
+        </div>
+    </div>
 
         {% if app.session.get('notifList') and is_granted('ROLE_USER') %}
             <div class="notification" style="position:fixed;top:30%;z-index: 1; width: 100%; background: #c9453c ">
@@ -13,35 +28,16 @@
             </div>
         {% endif %}
 
-        <div class="col-sm-12" id="speech">
-            <h2 class="col-sm-6">Our mission</h2>
-            <p class="col-sm-6">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec facilisis dictum sapien sed commodo.
-                Cras et tortor id risus ultricies varius. Sed luctus vestibulum lorem, dapibus dignissim massa pharetra a.
-                Praesent vulputate, arcu consequat tristique faucibus, nisi elit malesuada eros, eu blandit eros velit sit
-                amet lorem. Morbi consequat elit erat, accumsan vestibulum felis consequat at. Class aptent taciti sociosqu
-                ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris venenatis enim vel eros aliquet, et egestas nulla tempus.
-                Sed eleifend mollis tortor, et scelerisque metus sagittis id. Donec dignissim ipsum ac velit ornare, tincidunt placerat neque tempor.
-            </p>
-        </div>
-    </div>
     <div id="announcement">
-        <h2 class="storyCount">Our climate stories safe holds <b>{{ total[0]|join('|') }} {{ total[0]|join('|') > 1 ? 'stories' : 'story' }}</b></h2>
         <p class ="h2-like">Here's a selection of the last published one</p>
     </div>
     <div class="homeStories">
         {{ include('storyCard.html.twig') }}
     </div>
-    <div class="col-sm-12" id="homeLinks">
-       <div class="col-sm-6">
-            <h3>Looking for a special one</h3>
-           <a class="btn" href="{{ path('browse', {'pageNumber':1})}}">Browse stories</a>
-       </div>
-        <div class="col-sm-6">
-            <h3>Not written yet ?</h3>
-            <a class="btn" href="{{ path('addStory') }}">Add a story</a>
-        </div>
-    </div>
+
+
+    <h3 id="filterTitle">Looking for a special one</h3>
+
 
     <div id="filterHome">
         {{ form_start(filter,{'attr':{'class':'form-inline'}, 'action': path('search') }) }}
